no IZ: fundBugs and other warning fixes