@@ -101,7 +101,7 @@ public class BreakpointsTreeModelFilter implements TreeModelFilter {
             return new Object[0];
         } 
         
-        Object[] ch = original.getChildren(parent, 0, 0);
+        Object[] ch = original.getChildren(parent, from, to);
         List l = new ArrayList();
         int i, k = ch.length, n = to - from;
         Map maxLines = new HashMap();
@@ -122,7 +122,7 @@ public class BreakpointsTreeModelFilter implements TreeModelFilter {
                 if (mI != null) {
                     line = Math.max(line, mI.intValue());
                 }
-                mI = new Integer(line);
+                mI = Integer.valueOf(line);
                 maxLines.put(fn, mI);
             }
             if (--n == 0) {
